[gd_scene load_steps=9 format=3 uid="uid://dgjabqthka8rx"]

[ext_resource type="Script" uid="uid://chkpb6fdxhpv7" path="res://scripts/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://dl2jronw5wti8" path="res://sprites/character.png" id="2_75vfm"]
[ext_resource type="PackedScene" uid="uid://ctd63fx6fjn8u" path="res://scenes/nodes/gravity.tscn" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://blqdsk7hiee48" path="res://scenes/nodes/player_input.tscn" id="3_gmlin"]
[ext_resource type="PackedScene" uid="uid://cj3safif0timg" path="res://scenes/nodes/player_movement.tscn" id="4_lvxji"]
[ext_resource type="Script" uid="uid://cw0kt5uq46uf3" path="res://scripts/nodes/player_areas_manager.gd" id="5_p47bc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kk62l"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvxji"]
radius = 3.0
height = 24.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_node", "player_input_node", "player_movement_node", "player_areas_manager_node")]
script = ExtResource("1_dovo2")
gravity_node = NodePath("Gravity")
player_input_node = NodePath("PlayerInput")
player_movement_node = NodePath("PlayerMovement")
player_areas_manager_node = NodePath("PlayerAreasManager")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.680001, 0.680001)
texture = ExtResource("2_75vfm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kk62l")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_lvxji")
debug_color = Color(0.995792, 0, 0.198893, 0.42)

[node name="Gravity" parent="." instance=ExtResource("2_gmlin")]
gravity = 300.0

[node name="PlayerInput" parent="." instance=ExtResource("3_gmlin")]

[node name="PlayerMovement" parent="." instance=ExtResource("4_lvxji")]
speed = 100.0
ladder_speed = 40.0
jump_velocity = 120.0

[node name="PlayerAreasManager" type="Node" parent="."]
script = ExtResource("5_p47bc")
metadata/_custom_type_script = "uid://cw0kt5uq46uf3"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.2, 2.2)

[connection signal="area_entered" from="Area2D" to="PlayerAreasManager" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="PlayerAreasManager" method="_on_area_2d_area_exited"]
